--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -43,10 +43,10 @@ faq:
     answer: "Bushlandia will be available on Amazon in late 2025. Join our email list to be notified as soon as it launches and receive exclusive updates about the release!"
   
   - question: "Is this available as an ebook or paperback?"
-    answer: "Bushlandia will launch as a premium hardcover edition, with ebook and paperback formats to follow. Subscribe to our newsletter for format availability updates and launch notifications."
+    answer: "Bushlandia will launch as an ebook and paperback format with a premium hardcover edition to follow. Subscribe to our newsletter for format availability updates and launch notifications."
   
   - question: "Are there reading guides or activity sheets available?"
-    answer: "Yes! We'll provide free reading guides, environmental activity sheets, and creative play resources for parents and educators. Sign up for our newsletter to receive these complementary materials when the book launches."
+    answer: "Yes! We are working on this so keep your eyes peeled and sign up for our newsletter to be updated when the Teacher Resource book launches.The Teacher Resource book will be suitable for both educators and parents."
   
   - question: "What makes Bushlandia special?"
     answer: "Bushlandia uniquely combines adventure storytelling with environmental education, set against authentic Australian bush settings featuring native wildlife. It teaches sustainability and environmental stewardship while sparking imagination, making learning about nature an exciting adventure rather than a lesson."
