Imagine if updates

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -7,7 +7,9 @@ author_url: /author/
 order: 3
 status: Coming Soon
 age_range: "2-6 years"
+image: /assets/images/books/imageif-cover-large.jpg
 category: "Fiction"
+cover_image: "/assets/images/books/imageif-cover-large.jpg"
 features:
   - Fiction
   - Animals
@@ -37,5 +39,23 @@ published_date:
 isbn: 
 price: 
 publisher: "Wild Imagination Press"
+
+# FAQ
+faq:
+  - question: "What age is Imagine If suitable for?"
+    answer: "Imagine If is perfect for children aged 2-6 years old. The rhythmic, rhyming text and silly scenarios make it ideal for read-aloud sessions with toddlers and preschoolers, while the interactive 'imagine if' prompts encourage creative thinking and giggles!"
+  
+  - question: "Where can I buy this book?"
+    answer: "Imagine If will be available on Amazon in late 2025. Join our email list to be notified as soon as it launches and receive exclusive updates about the release!"
+  
+  - question: "Is this available as an ebook or paperback?"
+    answer: "Imagine If will launch as an ebook and paperback format with a premium hardcover edition to follow. Subscribe to our newsletter for format availability updates and launch notifications."
+  
+  - question: "What makes Imagine If special?"
+    answer: "Imagine If combines laugh-out-loud silly scenarios with a heartwarming message about self-acceptance. Each page features whimsical animals doing wonderfully ridiculous things from giraffes in scarves to pigs who fly, building confidence and encouraging creative thinking while reminding children that being themselves is the most wonderful thing of all."
+  
+  - question: "Is this good for bedtime reading?"
+    answer: "Absolutely! The rhythmic, rhyming text creates a soothing reading experience perfect for bedtime routines, while the gentle humor and positive message help children wind down with smiles. The interactive nature also makes it great for daytime giggles and creative play sessions."
+
 layout: book
 ---
