Corrected imagine if description

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -15,7 +15,25 @@ features:
   - Animals
   - Interactive
   - Ages 2-6
-description: "A charming counting book that follows playful puppies through their day"
+
+# SEO & Marketing
+description: "A whimsical picture book that takes children on a silly adventure through imaginative 'what if' scenarios with animals doing wonderfully ridiculous things, celebrating creativity and self-acceptance."
+keywords: "children's picture books, silly animal books, imagination books, rhyming books, ages 2-6, creative play, self-acceptance, read-aloud books, preschool books, toddler books, what if scenarios"
+
+# Book Details
+amazon_link: "#preorder"
+published_date: "2025-11-01"
+isbn: "TBA"
+price: "$19.95 AUD"
+page_count: 32
+format: "Hardcover"
+publisher: "Wild Imagination Press"
+
+# Social Sharing
+og_image: "/assets/images/books/imagineif-og.jpg"
+twitter_image: "/assets/images/books/imagineif-twitter.jpg"
+
+layout: book
 full_description: |
   What if your child could be anything they wanted to be? Get ready for the silliest, most imaginative adventure ever!
 
@@ -34,11 +52,6 @@ full_description: |
   It's time to dream big and laugh out loud! This delightful romp through imagination land builds confidence, encourages creative thinking, and reminds children that being themselves is the most wonderful thing of all.
 
   **Ready to unleash your child's wildest dreams? Dive into this silly adventure where anything is possible!**
-amazon_link:
-published_date: 
-isbn: 
-price: 
-publisher: "Wild Imagination Press"
 
 # FAQ
 faq:
