Added book previews

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -34,6 +34,17 @@ publisher: "Wild Imagination Press"
 og_image: "/assets/images/books/bushlandia-og.jpg"
 twitter_image: "/assets/images/books/bushlandia-twitter.jpg"
 
+# Book Preview
+preview_images:
+  - path: "/assets/images/books/bushlandia_page_09"
+    caption: "Exploring the Australian bush"
+  - path: "/assets/images/books/bushlandia_page_29"
+    caption: "Building Bushlandia"
+  - path: "/assets/images/books/bushlandia_page_33"
+    caption: "The magical lyrebird appears"
+  - path: "/assets/images/books/bushlandia_page_34"
+    caption: "Becoming environmental stewards"
+
 # FAQ
 faq:
   - question: "What age is Bushlandia suitable for?"
