Imagine if updates

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -33,6 +33,17 @@ publisher: "Wild Imagination Press"
 og_image: "/assets/images/books/imagineif-og.jpg"
 twitter_image: "/assets/images/books/imagineif-twitter.jpg"
 
+# Book Preview
+preview_images:
+  - path: "/assets/images/books/imageif_page_09"
+    caption: "A giraffe in a scarf twirling with glee"
+  - path: "/assets/images/books/imageif_page_10"
+    caption: "A pig soaring through clouds"
+  - path: "/assets/images/books/imageif_page_11"
+    caption: "A kangaroo bouncing in sneakers"
+  - path: "/assets/images/books/imageif_page_13"
+    caption: "Celebrating who you are"
+
 layout: book
 full_description: |
   What if your child could be anything they wanted to be? Get ready for the silliest, most imaginative adventure ever!
