Book pages updates

--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -32,6 +32,17 @@ publisher: "Wild Imagination Press"
 og_image: "/assets/images/books/onepuppytwopuppies-og.jpg"
 twitter_image: "/assets/images/books/onepuppytwopuppies-twitter.jpg"
 
+# Book Preview
+preview_images:
+  - path: "/assets/images/books/onepuppytwopuppies-page-08"
+    caption: "Counting puppies playing together"
+  - path: "/assets/images/books/onepuppytwopuppies-page-10"
+    caption: "Puppies running and jumping"
+  - path: "/assets/images/books/onepuppytwopuppies-page-13"
+    caption: "Learning numbers with puppy friends"
+  - path: "/assets/images/books/onepuppytwopuppies-page-14"
+    caption: "Snuggle time with puppies"
+
 # FAQ
 faq:
   - question: "What age group is this counting book for?"
