--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
         </div>
       </div>
     </div>
-    <a href="#contact" class="cta-button">🔔 Notify Me When Available</a>
+    <a href="#contact" class="cta-button">Notify Me When Available</a>
   </div>
 </section>
 
@@ -99,7 +99,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
             <span>Features native Australian wildlife and magical bush settings</span>
           </div>
         </div>
-        <p class="status">📅 Status: Coming Soon to Amazon</p>
+        <p class="status">Status: Coming Soon to Amazon</p>
         <div class="book-features">
           <span class="feature-tag">Fiction</span>
           <span class="feature-tag">Creativity</span>
