Amazon links readiness

--- a/_books/bushlandia.html
+++ b/_books/bushlandia.html
@@ -22,13 +22,40 @@ description: "An enchanting Australian bush adventure where four kids create the
 keywords: "Australian children's books, bush adventure, environmental stories, nature exploration, kids 7-10, sustainability, teamwork, creative play, Australian wildlife, outdoor adventure"
 
 # Book Details
-amazon_link: "#preorder"
 published_date: "2025-12-01"
 isbn: "TBA"
-price: "$24.95 AUD"
 page_count: 48
-format: "Hardcover"
 publisher: "Wild Imagination Press"
+
+# Amazon KDP Product Links (Structure ready, values to be filled when account is active)
+# Note: Kindle, Paperback, and Audiobook formats are supported
+amazon:
+  kindle:
+    asin: ""  # Will be populated when KDP account is active
+    url: ""   # Will be populated when book is published
+    price: "$4.99 AUD"  # Estimated price
+    ku_eligible: true  # Plan for Kindle Unlimited enrollment
+    status: "coming_soon"  # pending | available | coming_soon
+  paperback:
+    asin: ""  # Will be populated when KDP account is active
+    url: ""   # Will be populated when book is published
+    price: "$19.95 AUD"  # Estimated price
+    print_length: 48  # KDP uses print length, not page count
+    status: "coming_soon"
+  audiobook:
+    asin: ""  # Will be populated when audiobook is available (via ACX or similar)
+    url: ""   # Will be populated when audiobook is published
+    price: "$14.99 AUD"  # Estimated price
+    status: "pending"  # pending | available | coming_soon
+  
+  # Marketplace-specific links (optional, for future)
+  marketplaces:
+    au: ""  # Primary marketplace (Amazon.com.au)
+    us: ""  # If expanding to Amazon.com
+    uk: ""  # If expanding to Amazon.co.uk
+
+# Primary format (for display purposes)
+format: "Paperback"  # Primary format planned
 
 # Social Sharing
 og_image: "/assets/images/books/bushlandia-og.jpg"
