--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -21,13 +21,40 @@ description: "A whimsical picture book that takes children on a silly adventure 
 keywords: "children's picture books, silly animal books, imagination books, rhyming books, ages 2-6, creative play, self-acceptance, read-aloud books, preschool books, toddler books, what if scenarios"
 
 # Book Details
-amazon_link: "#preorder"
 published_date: "2025-11-01"
 isbn: "TBA"
-price: "$19.95 AUD"
 page_count: 32
-format: "Hardcover"
 publisher: "Wild Imagination Press"
+
+# Amazon KDP Product Links (Structure ready, values to be filled when account is active)
+# Note: Kindle, Paperback, and Audiobook formats are supported
+amazon:
+  kindle:
+    asin: ""  # Will be populated when KDP account is active
+    url: ""   # Will be populated when book is published
+    price: "$4.99 AUD"  # Estimated price
+    ku_eligible: true  # Plan for Kindle Unlimited enrollment
+    status: "pending"  # pending | available | coming_soon
+  paperback:
+    asin: ""  # Will be populated when KDP account is active
+    url: ""   # Will be populated when book is published
+    price: "$19.95 AUD"  # Estimated price
+    print_length: 32  # KDP uses print length, not page count
+    status: "pending"
+  audiobook:
+    asin: ""  # Will be populated when audiobook is available (via ACX or similar)
+    url: ""   # Will be populated when audiobook is published
+    price: "$14.99 AUD"  # Estimated price
+    status: "pending"  # pending | available | coming_soon
+  
+  # Marketplace-specific links (optional, for future)
+  marketplaces:
+    au: ""  # Primary marketplace (Amazon.com.au)
+    us: ""  # If expanding to Amazon.com
+    uk: ""  # If expanding to Amazon.co.uk
+
+# Primary format (for display purposes)
+format: "Paperback"  # Primary format planned
 
 # Social Sharing
 og_image: "/assets/images/books/imagineif-og.jpg"
