Added bushlandia series

--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,10 +1,10 @@
 ---
-title: "Imagine if... A Silly Animal Adventure"
+title: "Imagine if..."
+sub_title: "A Silly Animal Adventure"
 author:
   name: Rebecca Mola
-  url: https://wildimaginationpress.com/author/
-author_url: /author/
-order: 3
+  url: /author/
+order: 1
 status: Coming Soon
 age_range: "2-6 years"
 image: /assets/images/books/imageif-cover-large.jpg
