--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,9 +1,9 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
+sub_title: ""
 author:
   name: Rebecca Mola
-  url: https://wildimaginationpress.com/author/
-author_url: /author/
+  url: /author/
 order: 2
 status: Coming Soon
 age_range: "0-4 years"
