--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ keywords: "Australian children's books, kids books australia, counting books, na
 
 <section id="books" class="books-section">
   <div class="container">
-    <h2>📖 Our Featured Book</h2>
+    <h2>Our Featured Book</h2>
     <div class="book-card">
       <div class="book-cover">
-        <a href="./books/bushlandia/" class="book-cover-link">
+        <a href="./books/bushlandia-magic-imagination-australian-bush/" class="book-cover-link">
           <img src="{{ '/assets/images/books/bushlandia-cover-medium.jpg' | relative_url }}" 
                srcset="{{ '/assets/images/books/bushlandia-cover-small.jpg' | relative_url }} 360w,
                        {{ '/assets/images/books/bushlandia-cover-medium.jpg' | relative_url }} 480w,
@@ -63,7 +63,8 @@ keywords: "Australian children's books, kids books australia, counting books, na
         </a>
       </div>
       <div class="book-info">
-        <h3><a href="./books/bushlandia/" class="book-title-link">"Bushlandia"</a></h3>
+        <h3><a href="./books/bushlandia-magic-imagination-australian-bush/" class="book-title-link">Bushlandia</a></h3>
+        <p class="book-subtitle">The Magic of Imagination in the Australian Bush</p>
         <p class="author">by Rebecca Mola</p>
         <div class="book-details">
           <div class="detail-item">
@@ -113,7 +114,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
 
 <section id="author" class="author-section">
   <div class="container">
-    <h2>✨ Meet the Author</h2>
+    <h2>Meet the Author</h2>
     <div class="author-card">
       <div class="author-image">
         <a href="{{ '/author/' | relative_url }}">
@@ -135,7 +136,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
 
 <section id="mission" class="mission-section">
   <div class="container">
-    <h2>🌳 Our Mission</h2>
+    <h2>Our Mission</h2>
     <div class="mission-card">
       <div class="mission-image">
         <img src="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}" alt="Book Tree" class="mission-logo" loading="lazy">
@@ -183,7 +184,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
 
 <section id="contact" class="contact-section">
   <div class="container">
-    <h2>📬 Stay Connected</h2>
+    <h2>Stay Connected</h2>
     <p class="contact-intro">Join our community of book lovers and be the first to know when our magical stories become available!</p>
     
     <div class="contact-benefits">
