--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -1,12 +1,19 @@
 ---
 title: "Bushlandia"
+sub_title: "The Magic of Imagination in the Australian Bush"
 author: 
   name: Rebecca Mola
-  url: https://wildimaginationpress.com/author/
-author_url: /author/
-order: 1
+  url: /author/
+order: 3
 status: Coming Soon
 age_range: "7-10 years"
+
+# Series Information
+series:
+  name: "Bushlandia"
+  number: 1
+  total_books: 3
+  subtitle: The Magic of Imagination in the australian Bush
 image: /assets/images/books/bushlandia-cover-large.jpg
 category: "Fiction"
 cover_image: "/assets/images/books/bushlandia-cover-large.jpg"
