--- a/author.html
+++ b/author.html
@@ -100,6 +100,9 @@ permalink: /author/
         </div>
         <div class="book-info-small">
           <h3><a href="{{ book.url | relative_url }}">{{ book.title }}</a></h3>
+          {% if book.sub_title and book.sub_title != "" %}
+            <p class="book-subtitle-small">{{ book.sub_title }}</p>
+          {% endif %}
           {% if book.author %}
             <p class="book-author-small">
               by 
