--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@ keywords: "Australian children's books, kids books australia, counting books, na
             <a href="{{ book.url | relative_url }}" class="book-card-link">
               {% if book.cover_image %}
                 {% assign cover_base = book.cover_image | replace: '-cover-large.jpg', '' | replace: '-cover.jpg', '' | replace: '.jpg', '' %}
-                {% assign cover_small = cover_base | append: '-cover-small.jpg' %}
-                {% assign cover_medium = cover_base | append: '-cover-medium.jpg' %}
-                {% assign cover_large = cover_base | append: '-cover-large.jpg' %}
-                <img src="{{ cover_medium | relative_url }}" 
-                     srcset="{{ cover_small | relative_url }} 360w,
-                             {{ cover_medium | relative_url }} 480w,
-                             {{ cover_large | relative_url }} 720w"
-                     sizes="(max-width: 768px) 200px, 300px"
+                {% assign square_small = cover_base | append: '-cover-square-small.jpg' %}
+                {% assign square_medium = cover_base | append: '-cover-square-medium.jpg' %}
+                {% assign square_large = cover_base | append: '-cover-square-large.jpg' %}
+                <img src="{{ square_medium | relative_url }}" 
+                     srcset="{{ square_small | relative_url }} 250w,
+                             {{ square_medium | relative_url }} 400w,
+                             {{ square_large | relative_url }} 600w"
+                     sizes="(max-width: 768px) 250px, 300px"
                      alt="{{ book.title }} book cover"
                      loading="lazy">
               {% else %}
-                <div class="cover-placeholder">
-                  <span class="placeholder-text">Cover<br>Coming<br>Soon</span>
+                <div class="cover-placeholder-spotlight">
+                  <span class="cover-coming-soon-spotlight">Cover Coming Soon</span>
                 </div>
               {% endif %}
               {% if book.series.number %}
