--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -24,6 +24,11 @@ features:
   - Sustainability
   - Ages 7-10
 
+# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+seo:
+  json_ld: false
+  type: WebPage
+
 # SEO & Marketing
 description: "An enchanting Australian bush adventure where four kids create their own nature town, learning environmental responsibility, teamwork, and the magic of imagination."
 keywords: "Australian children's books, bush adventure, environmental stories, nature exploration, kids 7-10, sustainability, teamwork, creative play, Australian wildlife, outdoor adventure"
