--- a/_books/bushlandia-secret-sound-hollow.html
+++ b/_books/bushlandia-secret-sound-hollow.html
@@ -24,6 +24,11 @@ features:
   - Nature
   - Ages 7-10
 
+# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+seo:
+  json_ld: false
+  type: WebPage
+
 # SEO & Marketing
 description: "The Bushlandia adventure continues! Join Lila, Finn, Leo, and Tamsin as they uncover the mysterious secrets hidden in the Sound Hollow."
 keywords: "Australian children's books, bush adventure, mystery, nature exploration, kids 7-10, Bushlandia series, Australian wildlife, outdoor adventure"
