--- a/_books/bushlandia-skyseed-experiment.html
+++ b/_books/bushlandia-skyseed-experiment.html
@@ -24,6 +24,11 @@ features:
   - Nature
   - Ages 7-10
 
+# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+seo:
+  json_ld: false
+  type: WebPage
+
 # SEO & Marketing
 description: "The thrilling conclusion to the Bushlandia trilogy! When drought threatens their beloved bush town, Lila, Finn, Leo, and Tamsin must use creativity and science to restore balance and help nature heal."
 keywords: "Australian children's books, bush adventure, science for kids, water cycle, environmental science, kids 7-10, Bushlandia series, STEM education, nature restoration"
