--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -16,6 +16,11 @@ features:
   - Interactive
   - Ages 2-6
 
+# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+seo:
+  json_ld: false
+  type: WebPage
+
 # SEO & Marketing
 description: "A whimsical picture book that takes children on a silly adventure through imaginative 'what if' scenarios with animals doing wonderfully ridiculous things, celebrating creativity and self-acceptance."
 keywords: "children's picture books, silly animal books, imagination books, rhyming books, ages 2-6, creative play, self-acceptance, read-aloud books, preschool books, toddler books, what if scenarios"
