--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -15,6 +15,11 @@ features:
   - Interactive
   - Ages 0-4
 
+# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+seo:
+  json_ld: false
+  type: WebPage
+
 # SEO & Marketing
 description: "A delightful counting book following ten playful puppies through fun daily activities. Perfect for toddlers learning numbers while celebrating the bond between children and their beloved pets."
 keywords: "counting books for toddlers, puppy books, numbers 1-10, preschool books, toddler learning, animal books, interactive counting, early maths, bedtime stories, ages 0-4"
