Added categories metadata

--- a/_books/bushlandia-secret-sound-hollow.html
+++ b/_books/bushlandia-secret-sound-hollow.html
@@ -24,6 +24,18 @@ features:
   - Nature
   - Ages 7-10
 
+# Categorization (avoid Jekyll reserved categories array)
+category_meta:
+  primary: "JUVENILE FICTION / Nature & the Natural World / Environment"
+  secondary: "JUVENILE FICTION / Action & Adventure / General"
+bisac_codes:
+  - "JUV029010"  # Nature & the Natural World / Environment
+  - "JUV001000"  # Action & Adventure / General
+amazon_categories:
+  - "Children's Books > Science, Nature & How It Works > Nature"
+  - "Children's Books > Action & Adventure"
+  - "Children's Books > Animals"
+
 # Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
 seo:
   json_ld: false
