--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -16,6 +16,18 @@ features:
   - Interactive
   - Ages 2-6
 
+# Categorization (avoid Jekyll reserved categories array)
+category_meta:
+  primary: "JUVENILE FICTION / Animals / General"
+  secondary: "JUVENILE FICTION / Humorous Stories"
+bisac_codes:
+  - "JUV002000"  # Animals / General
+  - "JUV019000"  # Humorous Stories
+amazon_categories:
+  - "Children's Books > Animals"
+  - "Children's Books > Humor"
+  - "Children's Books > Self-Esteem & Self-Respect"
+
 # Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
 seo:
   json_ld: false
