--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -15,6 +15,18 @@ features:
   - Interactive
   - Ages 0-4
 
+# Categorization (avoid Jekyll reserved categories array)
+category_meta:
+  primary: "JUVENILE NONFICTION / Concepts / Counting & Numbers"
+  secondary: "JUVENILE FICTION / Animals / Dogs"
+bisac_codes:
+  - "JNF013000"  # Concepts / Counting & Numbers
+  - "JUV002070"  # Animals / Dogs
+amazon_categories:
+  - "Children's Books > Early Learning > Counting & Numbers"
+  - "Children's Books > Animals > Dogs"
+  - "Children's Books > Basic Concepts"
+
 # Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
 seo:
   json_ld: false
