--- a/privacy.html
+++ b/privacy.html
@@ -69,7 +69,7 @@ permalink: /privacy/
       <ul>
         <li><strong>Formspree:</strong> Email form processing (privacy policy: <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">formspree.io/legal/privacy-policy</a>)</li>
         <li><strong>Google Analytics:</strong> Website analytics (privacy policy: <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">policies.google.com/privacy</a>)</li>
-        <li><strong>Netlify:</strong> Website hosting (privacy policy: <a href="https://www.netlify.com/privacy/" target="_blank" rel="noopener">netlify.com/privacy</a>)</li>
+        <li><strong>GitHub Pages:</strong> Website hosting (privacy policy: <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank" rel="noopener">docs.github.com/en/site-policy/privacy-policies/github-privacy-statement</a>)</li>
       </ul>
       
       <h2>Children's Privacy</h2>
