Initial available now

--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -5,7 +5,7 @@ author:
   name: Rebecca Mola
   url: /author/
 order: 3
-status: Coming Soon
+status: Available
 age_range: "7-10 years"
 
 # Series Information
@@ -61,11 +61,11 @@ amazon:
     ku_eligible: true  # Plan for Kindle Unlimited enrollment
     status: "coming_soon"  # pending | available | coming_soon
   paperback:
-    asin: ""  # Will be populated when KDP account is active
-    url: ""   # Will be populated when book is published
-    price: "$19.95 AUD"  # Estimated price
+    asin: "1764423003"
+    url: "https://www.amazon.com.au/dp/1764423003"
+    price: "$15.39 AUD"  # Estimated price
     print_length: 48  # KDP uses print length, not page count
-    status: "coming_soon"
+    status: "available"
   audiobook:
     asin: ""  # Will be populated when audiobook is available (via ACX or similar)
     url: ""   # Will be populated when audiobook is published
@@ -74,7 +74,7 @@ amazon:
   
   # Marketplace-specific links (optional, for future)
   marketplaces:
-    au: ""  # Primary marketplace (Amazon.com.au)
+    au: "https://www.amazon.com.au/dp/1764423003"  # Primary marketplace (Amazon.com.au)
     us: ""  # If expanding to Amazon.com
     uk: ""  # If expanding to Amazon.co.uk
 
@@ -102,10 +102,10 @@ faq:
     answer: "Bushlandia is perfect for children aged 7-10 years old. The story's themes of creativity, teamwork, and environmental responsibility resonate well with this age group, making it ideal for independent readers or family read-aloud sessions."
   
   - question: "Where can I buy this book?"
-    answer: "Bushlandia will be available on Amazon in late 2025. Join our email list to be notified as soon as it launches and receive exclusive updates about the release!"
+    answer: "Bushlandia is now available as a paperback on Amazon.com.au. You can purchase it directly on Amazon or follow the links on this page to head straight to the book."
   
   - question: "Is this available as an ebook or paperback?"
-    answer: "Bushlandia will launch as an ebook and paperback format with a premium hardcover edition to follow. Subscribe to our newsletter for format availability updates and launch notifications."
+    answer: "Bushlandia is currently available in paperback, with Kindle ebook and premium hardcover formats planned for the future. Subscribe to our newsletter for updates on new formats and launch announcements."
   
   - question: "Are there reading guides or activity sheets available?"
     answer: "Yes! We are working on this so keep your eyes peeled and sign up for our newsletter to be updated when the Teacher Resource book launches.The Teacher Resource book will be suitable for both educators and parents."
