--- a/author.html
+++ b/author.html
@@ -117,7 +117,11 @@ permalink: /author/
               {% endif %}
             </p>
           {% endif %}
+          {% if book.amazon and book.amazon.paperback and book.amazon.paperback.status == "available" and book.amazon.paperback.url != "" and book.amazon.paperback.url != "#" %}
+          <p class="book-status-small">Available – Paperback on Amazon.com.au</p>
+          {% else %}
           <p class="book-status-small">{{ book.status }}</p>
+          {% endif %}
         </div>
       </div>
         {% endif %}
