--- a/author.html
+++ b/author.html
@@ -133,6 +133,7 @@ permalink: /author/
 <section class="author-connect">
   <div class="container">
     <h2>Connect with Rebecca</h2>
+    <a href="mailto:rebecca@wildimaginationpress.com" class="author-email-pill">Email Rebecca Directly</a>
     <p>Follow Rebecca's writing journey and get updates on new releases:</p>
     <div class="social-links">
       <div class="social-icons">
@@ -158,6 +159,7 @@ permalink: /author/
         </a>
       </div>
     </div>
+
     <p class="cta-text">Want to be the first to know about new books?</p>
     <a href="/#contact" class="cta-button">Join Our Story Tree Email List</a>
   </div>
