--- a/author.html
+++ b/author.html
@@ -160,7 +160,7 @@ permalink: /author/
       </div>
     </div>
 
-    <p class="cta-text">Want to be the first to know about new books?</p>
+    <p>Want to be the first to know about new books?</p>
     <a href="/#contact" class="cta-button">Join Our Story Tree Email List</a>
   </div>
 </section>
